[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[lib]
name="lib"
path="src/lib.rs"

[[bin]]
name="day1"
path="src/day1.rs"

[[bin]]
name="day2"
path="src/day2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
